--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/google-fonts": "^3.2.0",
+    "language-colors": "^2.1.55",
     "nuxt": "^3.13.0",
     "vue": "latest",
     "vue-router": "latest"
